# matrixcompare

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build_and_test.yml
examples/: proptest.rs
matrixcompare-core/: Cargo.toml
matrixcompare-core/src/: lib.rs
matrixcompare-minimal/: Cargo.toml
matrixcompare-minimal/src/: main.rs
matrixcompare-mock/: Cargo.toml
matrixcompare-mock/src/: lib.rs
src/: assert_matrix_eq.rs  assert_scalar_eq.rs  comparators.rs  comparison.rs  comparison_failure.rs  lib.rs  macros.rs  matrix_comparison.rs  mock.rs  proptest.rs  scalar_comparison.rs  ulp.rs
tests/: common.rs  dense_dense_comparison.proptest-regressions  dense_dense_comparison.rs  dense_matrix_comparison.proptest-regressions  dense_matrix_comparison.rs  dense_sparse_comparison.rs  dense_sparse_matrix_comparion.proptest-regressions  dense_sparse_matrix_comparion.rs  matrix_comparison.rs  output.rs  scalar_comparison.rs  sparse_sparse_comparion.proptest-regressions  sparse_sparse_comparion.rs  sparse_sparse_comparison.rs
