[package]
name = "matrixcompare"
version = "0.1.3"
authors = ["Andreas Longva"]
edition = "2018"
license = "MIT"
repository = "https://github.com/Andlon/matrixcompare"
keywords = [ "matrix", "comparison", "linear", "algebra", "linear-algebra" ]
description = "Tools for convenient comparison of matrices"
readme = "README.md"

[dependencies]
num-traits = { version = "0.2", default-features = false }
matrixcompare-core = { path = "matrixcompare-core", version="0.1"}

[dev-dependencies]
quickcheck = "0.9"
matrixcompare-mock = { path = "matrixcompare-mock", version="0.1" }
proptest = "0.10"
pretty_assertions = "0.6.1"
