[package]
name = "matrixcompare-mock"
version = "0.1.0"
authors = ["Andreas Longva"]
edition = "2018"
license = "MIT"
repository = "https://github.com/Andlon/matrixcompare"
description = "Internal mock data structures for testing of matrixcompare"

[dependencies]
num = "0.3"
matrixcompare = { path = "..", version="0.1" }
proptest = "0.10"

